--- a/templates/form_signup.phtml
+++ b/templates/form_signup.phtml
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 <?php
 require 'templates/layout/header.phtml';
 
@@ -11,3 +20,5 @@ if($error) : ?>
     Contraseña: <input type="password" name="contrasenia" id="contrasenia" required>
     <button type="submit">Registrar</button>
 </form>
+</body>
+</html>
