--- a/templates/form_agregarPiloto.phtml
+++ b/templates/form_agregarPiloto.phtml
@@ -1,11 +1,11 @@
-<h3>Añadir Piloto:</h3>
 <form action="agregarPiloto" method="post">
-Nombre:<input required type="text" name="nombre" id="">
-DNI:<input required type="text" name="dni" id="">
-Fecha de nacimiento:<input required type="date" name="fecha_nac" id="">
-Gmail: <input required type="text" name="gmail" id="">
-Dirección: <input required type="text" name="direccion" id="">
-Telefono: <input required type="number" name="telefono" id="">
-Número de Licencia: <input required type="number" name="licencia" id="">
-<button type="submit">Enviar</button>
-</form>
+        <h3>Añadir Piloto:</h3>
+        <div>Nombre:<input required type="text" name="nombre" id=""></div>
+        <div>DNI:<input required type="text" name="dni" id=""></div> 
+        <div>Fecha de nacimiento:<input required type="date" name="fecha_nac" id=""></div>
+        <div>Gmail: <input required type="text" name="gmail" id=""></div>
+        <div>Dirección: <input required type="text" name="direccion" id=""></div>
+        <div>Telefono: <input required type="number" name="telefono" id=""></div>
+        <div>Número de Licencia: <input required type="number" name="licencia" id=""></div>
+    <button type="submit">Enviar</button>
+</form>    
