--- a/templates/layout/header.phtml
+++ b/templates/layout/header.phtml
@@ -1,10 +1,13 @@
-<?php
-require_once 'urls.php';
-$base=baseurl();
+<body>
+<?php require_once 'urls.php';
+    $base=baseurl();?>
 
-echo "<a href='".$base."home'>Home</a>
-<a href='".$base."verPilotos'>Pilotos</a>
-<a href='".$base."showLogin'>Login</a>
-<a href='".$base."logout'>Logout</a>";
+    <nav>
+        <a href='<?=$base?>home'>Home</a>
+        <a href='<?=$base?>verPilotos'>Pilotos</a>
+        <a href='<?=$base?>showLogin'>Login</a>
+        <a href='<?=$base?>logout'>Logout</a>
+    </nav>
+</body>
 
-?>
+
