--- a/templates/vista_home.phtml
+++ b/templates/vista_home.phtml
@@ -1,24 +1,38 @@
-<?php require 'templates/layout/header.phtml'; ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Home</title>
+</head>
+<body>
+    <?php require 'templates/layout/header.phtml';?>
 
-<?php require 'templates/form_agregar.phtml';
-require 'templates/form_agregarPiloto.phtml';?>
-
-<h1>VUELOS</h1>
+    <h1>VUELOS</h1>
     <table>
-        <tr>
-            <td style="font-size: 30px; color: red;">Piloto</td>
-            <td style="font-size: 30px; color: red;">Origen</td>
-            <td style="font-size: 30px; color: red;">Destino</td>
-        </tr>
+        <thead>
+            <tr>
+                <td>Piloto</td>
+                <td>Origen</td>
+                <td>Destino</td>
+            </tr>
+        </thead>    
+    
 
-<?php foreach ($vuelos as $vuelo):
-    $piloto;
-    foreach ($pilotos as $pp) {
-        if ($pp->id_piloto === $vuelo->id_piloto) {
-            $piloto = $pp;
-            break; // Salimos del bucle una vez encontrado
+    <?php foreach ($vuelos as $vuelo):
+        $piloto;
+        foreach ($pilotos as $pp) {
+            if ($pp->id_piloto === $vuelo->id_piloto) {
+                $piloto = $pp;
+                break; // Salimos del bucle una vez encontrado
+            }
         }
-    }
     require 'templates/vista_resumido.phtml';
     endforeach ?>
     </table>
+
+    <div class="dividido"><?php require 'templates/form_agregar.phtml';
+    require 'templates/form_agregarPiloto.phtml';?></div>
+</body>
+</html>
